# fp_lab3

./: .gitignore  LICENSE  README.md  fp-lab3.cabal  orig_lab.py  stack.yaml
.github/workflows/: haskell-lab3-tests.yaml
src/: App.hs  Interpolation.hs  Main.hs  Types.hs
test/: Spec.hs
